Miscellaneous Fixes and cleanup
Fixed - register button hides on click
Implemented - Change request to make laptop image cropped and not stretched
Fixed - Custom date persists in dashboard even after changing menu
Fixed - brand count in brand summary widget by concatenating Accepted and Accepted on audit
Removed loggers
Added error message when User update fails
Updated app version to 6.0.0

--- a/src/client/components/Hero/Hero.component.scss
+++ b/src/client/components/Hero/Hero.component.scss
@@ -31,9 +31,9 @@
 
     }
     .c-Hero__right-container {
-      background: url("../../images/laptopImage.jpg") no-repeat;
-      background-size: 100% 100%;
-
+      background: url("../../images/laptopImage.jpg") no-repeat center;
+      //background-size: 100% 100%;
+      background-size: cover;
     }
   }
 
